put h2 as absolute to prevent it shifting other elements

--- a/client/src/css/App.css
+++ b/client/src/css/App.css
@@ -14,4 +14,8 @@
 h2 {
   font-size: 36px;
   letter-spacing: 2px;
+  position: absolute;
+  font-size: 36px;
+  top: 250px;
+  letter-spacing: 2px;
 }
